--- a/src/app/components/sfooter/sfooter.component.html
+++ b/src/app/components/sfooter/sfooter.component.html
@@ -51,7 +51,7 @@
                 style="opacity:1;fill:#b1b1b1;fill-opacity:1;stroke:none;stroke-width:2.02704;stroke-linecap:round;stroke-dasharray:none;stroke-dashoffset:0;stroke-opacity:1"
                 d="M 16.175882,1.7256043e-7 A 5.5591569,5.5591569 0 0 0 10.617288,5.5585941 5.5591569,5.5591569 0 0 0 16.175882,11.117188 5.5591569,5.5591569 0 0 0 21.736424,5.5585941 5.5591569,5.5591569 0 0 0 16.175882,1.7256043e-7 Z m 0,2.77929692743957 a 2.7795784,2.7795784 0 0 1 2.779296,2.779297 2.7795784,2.7795784 0 0 1 -2.779296,2.7792967 2.7795784,2.7795784 0 0 1 -2.779297,-2.7792967 2.7795784,2.7795784 0 0 1 2.779297,-2.779297 z"/>
         </svg>
-        <p class="pp ppp">© 2024 SistemaRT Content</p>
+        <p class="pp ppp">Copyright © 2024.</p>
         <!--<p class="pp">Equipo de soporte</p>-->
     </div>
     <div class="item-base container-social">
