--- a/src/app/components/sfooter/sfooter.component.scss
+++ b/src/app/components/sfooter/sfooter.component.scss
@@ -22,7 +22,7 @@
     flex-direction: row;
     gap: 20px;
     align-items: center;
-    
+
     @media (max-width: 599.98px) and (orientation: portrait), (max-width: 959.98px) and (orientation: landscape) {
         flex-direction: column;
         gap: 10px;
@@ -50,6 +50,7 @@
     cursor: pointer;
     text-decoration: underline;
     color: #FFA500;
+    font-family: RobotoLight, monospace;
 }
 
 .ppp {
