--- a/src/app/components/structure/structure.component.html
+++ b/src/app/components/structure/structure.component.html
@@ -1,39 +1,46 @@
 <div class="struct">
-    <div class="back">
+    <div class="drop">
 
     </div>
+
+    <!-- cabecera de la aplicación -->
     <div class="hdr">
-        <div class="hdr-item">
+        <div class="item-padding">
             <ng-content select="[hdr]"/>
         </div>
     </div>
 
+    <!--navegación-->
     <div class="nav">
-        <div class="nav-item">
+        <div class="item-padding">
             <ng-content select="[nav]"/>
         </div>
     </div>
 
+    <!--contenido principal-->
     <div class="mn">
-        <div class="mn-item">
+        <div class="item-padding">
             <ng-content select="[mn]"/>
         </div>
     </div>
 
+    <!--pie de página 1-->
     <div class="ftr">
-        <div class="ftr-item">
+        <div class="item-padding">
             <ng-content select="[ftr]"/>
         </div>
     </div>
 
+    <!--pie de página 2-->
     <div class="sftr">
-        <div class="sftr-item">
+        <div class="item-padding">
             <ng-content select="[sftr]"/>
         </div>
     </div>
 
-    <dialog id="dwr" open>
+    <!--cajón de navegación-->
+    <div id="dwr">
         <ng-content select="[dwr]"/>
-    </dialog>
+    </div>
 </div>
 
