--- a/src/app/pages/structured/structured.component.html
+++ b/src/app/pages/structured/structured.component.html
@@ -1,1 +1,37 @@
 <p>diseño estructurado</p>
+<p>diseño estructurado</p>
+<p>diseño estructurado</p>
+<p>diseño estructurado</p>
+<p>diseño estructurado</p>
+<p>diseño estructurado</p>
+<p>diseño estructurado</p>
+<p>diseño estructurado</p>
+<p>diseño estructurado</p>
+<p>diseño estructurado</p>
+<p>diseño estructurado</p>
+<p>diseño estructurado</p>
+<p>diseño estructurado</p>
+<p>diseño estructurado</p>
+<p>diseño estructurado</p>
+<p>diseño estructurado</p>
+<p>diseño estructurado</p>
+<p>diseño estructurado</p>
+<p>diseño estructurado</p>
+<p>diseño estructurado</p>
+<p>diseño estructurado</p>
+<p>diseño estructurado</p>
+<p>diseño estructurado</p>
+<p>diseño estructurado</p>
+<p>diseño estructurado</p>
+<p>diseño estructurado</p>
+<p>diseño estructurado</p>
+<p>diseño estructurado</p>
+<p>diseño estructurado</p>
+<p>diseño estructurado</p>
+<p>diseño estructurado</p>
+<p>diseño estructurado</p>
+<p>diseño estructurado</p>
+<p>diseño estructurado</p>
+<p>diseño estructurado</p>
+
+
