--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -5,7 +5,7 @@
     33.34%, 66.66% {
         fill: #f98f00ff;
     }
-    66.67%, 100%{
+    66.67%, 100% {
         fill: #f2d082ff;
     }
 }
@@ -15,8 +15,14 @@
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
+    align-content: start;
+    padding: 16px 0 16px 0;
 
-    #circle6515 {
+    /*.logo {
+        height: 30px;
+    }*/
+
+    #path336 {
         animation: toggle 2s infinite;
     }
 
