--- a/src/app/pages/oo/oo.component.html
+++ b/src/app/pages/oo/oo.component.html
@@ -1,1 +1,50 @@
 <p>diseño orientado a objetos</p>
+<p>diseño orientado a objetos</p>
+<p>diseño orientado a objetos</p>
+<p>diseño orientado a objetos</p>
+<p>diseño orientado a objetos</p>
+<p>diseño orientado a objetos</p>
+<p>diseño orientado a objetos</p>
+<p>diseño orientado a objetos</p>
+<p>diseño orientado a objetos</p>
+<p>diseño orientado a objetos</p>
+<p>diseño orientado a objetos</p>
+<p>diseño orientado a objetos</p>
+<p>diseño orientado a objetos</p>
+<p>diseño orientado a objetos</p>
+<p>diseño orientado a objetos</p>
+<p>diseño orientado a objetos</p>
+<p>diseño orientado a objetos</p>
+<p>diseño orientado a objetos</p>
+<p>diseño orientado a objetos</p>
+<p>diseño orientado a objetos</p>
+<p>diseño orientado a objetos</p>
+<p>diseño orientado a objetos</p>
+<p>diseño orientado a objetos</p>
+<p>diseño orientado a objetos</p>
+<p>diseño orientado a objetos</p>
+<p>diseño orientado a objetos</p>
+<p>diseño orientado a objetos</p>
+<p>diseño orientado a objetos</p>
+<p>diseño orientado a objetos</p>
+<p>diseño orientado a objetos</p>
+<p>diseño orientado a objetos</p>
+<p>diseño orientado a objetos</p>
+<p>diseño orientado a objetos</p>
+<p>diseño orientado a objetos</p>
+<p>diseño orientado a objetos</p>
+<p>diseño orientado a objetos</p>
+<p>diseño orientado a objetos</p>
+<p>diseño orientado a objetos</p>
+<p>diseño orientado a objetos</p>
+<p>diseño orientado a objetos</p>
+<p>diseño orientado a objetos</p>
+<p>diseño orientado a objetos</p>
+<p>diseño orientado a objetos</p>
+<p>diseño orientado a objetos</p>
+<p>diseño orientado a objetos</p>
+<p>diseño orientado a objetos</p>
+<p>diseño orientado a objetos</p>
+<p>diseño orientado a objetos</p>
+<p>diseño orientado a objetos</p>
+
