--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -93,7 +93,7 @@
         }
     } @else {
         <svg
-            (click)="listener?.onClick()"
+            (click)="onClick()"
             class="nav-links nav-hamburger"
             width="24"
             height="24"
