--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,6 +1,6 @@
-.app {
-  font-family: CustomFont, monospace;
-  color: #55565a;
-}
+/*.app {
+    font-family: CustomFont, monospace;
+    color: #55565aff;
+}*/
 
 /*# sourceMappingURL=app.component.css.map */
