--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <app-struct
-    class="app"
+    style="font-family: CustomFont,monospace; color: #55565aff"
     [padding]="padding"
     [color]="color"
 >
