--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,8 @@
 <app-struct
     class="app"
-    [padding]="padding"
     [color]="color"
+    [paddingDesktop]="60"
+    [paddingMobile]="25"
 >
     <app-drawer
         dlg
