--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -7,7 +7,7 @@
     </p>
 
     <div class="item-base container-correo">
-        <input placeholder="ingrese su correo electrónico" class="item-correo" [(ngModel)]="value">
+        <input placeholder="ingresa tu correo electrónico" class="item-correo" [(ngModel)]="value">
 
         <p class="item-correo">
             Una vez que hayas solicitado el Sistema RT, recibirás un correo electrónico de confirmación en la dirección
