--- a/src/app/pages/error/error.component.html
+++ b/src/app/pages/error/error.component.html
@@ -1,1 +1,14 @@
-<p>error works!</p>
+<div>
+    @if (!isMobile) {
+        <div>
+            <img src="assets/gif/ups.gif">
+        </div>
+    }
+    <div>
+        <h1>Oops!</h1>
+        <p>Parece que estas perdido en el espacio.</p>
+        <p>Código de error: 404</p>
+        <p>Es posible que la página que estás buscando haya sido eliminada o no esté disponible temporalmente</p>
+        <button>¿ESTAR A SALVO?</button>
+    </div>
+</div>
