--- a/src/app/pages/structured/structured.component.html
+++ b/src/app/pages/structured/structured.component.html
@@ -1,37 +1,8 @@
-<p>diseño estructurado</p>
-<p>diseño estructurado</p>
-<p>diseño estructurado</p>
-<p>diseño estructurado</p>
-<p>diseño estructurado</p>
-<p>diseño estructurado</p>
-<p>diseño estructurado</p>
-<p>diseño estructurado</p>
-<p>diseño estructurado</p>
-<p>diseño estructurado</p>
-<p>diseño estructurado</p>
-<p>diseño estructurado</p>
-<p>diseño estructurado</p>
-<p>diseño estructurado</p>
-<p>diseño estructurado</p>
-<p>diseño estructurado</p>
-<p>diseño estructurado</p>
-<p>diseño estructurado</p>
-<p>diseño estructurado</p>
-<p>diseño estructurado</p>
-<p>diseño estructurado</p>
-<p>diseño estructurado</p>
-<p>diseño estructurado</p>
-<p>diseño estructurado</p>
-<p>diseño estructurado</p>
-<p>diseño estructurado</p>
-<p>diseño estructurado</p>
-<p>diseño estructurado</p>
-<p>diseño estructurado</p>
-<p>diseño estructurado</p>
-<p>diseño estructurado</p>
-<p>diseño estructurado</p>
-<p>diseño estructurado</p>
-<p>diseño estructurado</p>
-<p>diseño estructurado</p>
+<div class="container">
+    <p class="title">
+        Diagrama de contexto
+    </p>
+    <!--<img class="img" src="assets/img/context.png">-->
+</div>
 
 
