--- a/src/app/components/drawer/drawer.component.css
+++ b/src/app/components/drawer/drawer.component.css
@@ -1,44 +1,16 @@
-/*.nav-links {
-    !*padding-top: 20px;
-    padding-bottom: 10px;*!
-
-    display: flex;
-    flex-direction: column;
-    gap: 20px;
-
-    .nav-item {
-        list-style: none;
-        padding-left: 40px;
-        padding-right: 40px;
-        width: 100%;
-
-        .nav-link {
-            color: white;
-            text-decoration: none;
-            font-family: ComfortaaRegular, monospace;
-            !* background-color: #004f8b;
-             width: 100%;
-             padding: 10px;
-             border-radius: 10px;*!
-
-            &:hover {
-                color: #f98f00;
-            }
-        }
-    }
-}*/
 .container {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  /*align-items: center;*/
   height: 100vh;
 }
 .container p {
+  /*display: block;*/
   color: #ccc;
   font-family: RobotoLight, serif;
   font-size: 12px;
   padding: 10px 40px;
+  margin: 0 auto;
 }
 
 .container-2 {
@@ -48,31 +20,30 @@
 }
 .container-2 .logo {
   width: 100%;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  align-items: center;
-  background-color: #1e2130;
   padding: 20px 0;
+  background-color: #1e2130;
 }
-.container-2 .nav-links {
+.container-2 .logo svg {
+  display: block;
+  margin: 0 auto;
+}
+.container-2 .nav-ul {
   display: flex;
   flex-direction: column;
-  gap: 20px;
 }
-.container-2 .nav-links .nav-item {
+.container-2 .nav-ul .nav-li {
   list-style: none;
-  padding-left: 40px;
-  padding-right: 40px;
+  padding: 10px 40px;
   width: 100%;
-}
-.container-2 .nav-links .nav-item .nav-link {
+  cursor: pointer;
   color: white;
-  text-decoration: none;
   font-family: CustomFont, monospace;
-  font-size: 15px;
+  font-size: 14px;
+  text-decoration: none;
+  user-select: none;
 }
-.container-2 .nav-links .nav-item .nav-link:hover {
+.container-2 .nav-ul .nav-li:hover {
+  background-color: rgba(242, 208, 130, 0.09);
   color: #f98f00;
 }
 
