--- a/src/app/components/footer/footer.component.css
+++ b/src/app/components/footer/footer.component.css
@@ -6,7 +6,7 @@
   color: white;
   align-items: center;
 }
-@media (max-width: 599.98px) and (orientation: portrait), (max-width: 959.98px) and (orientation: landscape) {
+@media (max-width: 768px) {
   .container-base {
     grid-template-columns: 1fr;
     justify-content: center;
