--- a/src/app/components/footer/footer.component.scss
+++ b/src/app/components/footer/footer.component.scss
@@ -10,7 +10,7 @@
 
     }
 
-    @media (max-width: 599.98px) and (orientation: portrait), (max-width: 959.98px) and (orientation: landscape) {
+    @media (max-width: 768px) {
         grid-template-columns: 1fr;
         justify-content: center;
     }
