--- a/src/app/pages/oo/oo.component.css
+++ b/src/app/pages/oo/oo.component.css
@@ -1,3 +1,12 @@
-
+.container {
+  display: flex;
+  flex-direction: column;
+  align-items: start;
+}
+.container p {
+  padding: 250px 0;
+  font-size: 25px;
+  color: rgba(30, 33, 48, 0.22);
+}
 
 /*# sourceMappingURL=oo.component.css.map */
