--- a/src/app/pages/oo/oo.component.html
+++ b/src/app/pages/oo/oo.component.html
@@ -1,50 +1,5 @@
-<p>diseño orientado a objetos</p>
-<p>diseño orientado a objetos</p>
-<p>diseño orientado a objetos</p>
-<p>diseño orientado a objetos</p>
-<p>diseño orientado a objetos</p>
-<p>diseño orientado a objetos</p>
-<p>diseño orientado a objetos</p>
-<p>diseño orientado a objetos</p>
-<p>diseño orientado a objetos</p>
-<p>diseño orientado a objetos</p>
-<p>diseño orientado a objetos</p>
-<p>diseño orientado a objetos</p>
-<p>diseño orientado a objetos</p>
-<p>diseño orientado a objetos</p>
-<p>diseño orientado a objetos</p>
-<p>diseño orientado a objetos</p>
-<p>diseño orientado a objetos</p>
-<p>diseño orientado a objetos</p>
-<p>diseño orientado a objetos</p>
-<p>diseño orientado a objetos</p>
-<p>diseño orientado a objetos</p>
-<p>diseño orientado a objetos</p>
-<p>diseño orientado a objetos</p>
-<p>diseño orientado a objetos</p>
-<p>diseño orientado a objetos</p>
-<p>diseño orientado a objetos</p>
-<p>diseño orientado a objetos</p>
-<p>diseño orientado a objetos</p>
-<p>diseño orientado a objetos</p>
-<p>diseño orientado a objetos</p>
-<p>diseño orientado a objetos</p>
-<p>diseño orientado a objetos</p>
-<p>diseño orientado a objetos</p>
-<p>diseño orientado a objetos</p>
-<p>diseño orientado a objetos</p>
-<p>diseño orientado a objetos</p>
-<p>diseño orientado a objetos</p>
-<p>diseño orientado a objetos</p>
-<p>diseño orientado a objetos</p>
-<p>diseño orientado a objetos</p>
-<p>diseño orientado a objetos</p>
-<p>diseño orientado a objetos</p>
-<p>diseño orientado a objetos</p>
-<p>diseño orientado a objetos</p>
-<p>diseño orientado a objetos</p>
-<p>diseño orientado a objetos</p>
-<p>diseño orientado a objetos</p>
-<p>diseño orientado a objetos</p>
-<p>diseño orientado a objetos</p>
-
+<div class="container">
+    <p>
+        Contenido para el análisis y diseño orientado a objetos
+    </p>
+</div>
