--- a/src/app/structure/struct/struct.component.css
+++ b/src/app/structure/struct/struct.component.css
@@ -1,9 +1,3 @@
-/*.padding {
-    padding: 0 20px 0 20px;
-}*/
-/*body{
-    overflow: hidden;
-}*/
 .struct {
   display: flex;
   flex-direction: column;
@@ -22,7 +16,7 @@
   top: 0;
   box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.2);
 }
-.struct .back {
+.struct .backdoor {
   position: absolute;
   inset: 0 0 0 0;
   background-color: rgba(0, 0, 0, 0.5);
