--- a/src/app/structure/struct/struct.component.html
+++ b/src/app/structure/struct/struct.component.html
@@ -1,65 +1,79 @@
 <div class="struct">
-    <dialog [open]="drawer">
-        <ng-content select="[dlg]"/>
-    </dialog>
-
-    @if (backdoor) {
-        <div class="back" (click)="onClick()"></div>
+    <!--cajón de navegación para el modo móvil-->
+    @if (isMobile) {
+        <dialog class="drawer" [open]="drawer">
+            <ng-content select="[dlg]"/>
+        </dialog>
     }
+
+    <!--elemento transparente que cubre el resto de la pantalla para poder mostrar el
+    cajón de navegación en modo móvil-->
+    @if (backdoor) {
+        <div class="backdoor" (click)="clickOnBackdoor()"></div>
+    }
+
+    <!--cabecera de la aplicación-->
     <header
+        class="header"
         [ngStyle]="{
             'background': color.header
         }"
     >
         <div
             [ngStyle]="{
-                'padding-left.px': padding.left,
-                'padding-right.px': padding.right,
+                'padding-left.px': isMobile?paddingMobile: paddingDesktop,
+                'padding-right.px':  isMobile?paddingMobile: paddingDesktop
             }"
         >
             <ng-content select="[hdr]"/>
         </div>
     </header>
 
+    <!--contenido principal de la aplicación-->
     <main
+        class="main"
         [ngStyle]="{
             'background': color.main
         }"
     >
         <div
             [ngStyle]="{
-                'padding-left.px': padding.left,
-                'padding-right.px': padding.right
+                'padding-left.px': isMobile?paddingMobile: paddingDesktop,
+                'padding-right.px':  isMobile?paddingMobile: paddingDesktop
             }"
         >
             <ng-content select="[mn]"/>
         </div>
     </main>
 
+    <!--pie de página de la aplicación-->
     <footer
+        class="footer"
         [ngStyle]="{
             'background': color.footer
         }"
     >
         <div
             [ngStyle]="{
-                'padding-left.px': padding.left,
-                'padding-right.px': padding.right
+                'padding-left.px': isMobile?paddingMobile: paddingDesktop,
+                'padding-right.px':  isMobile?paddingMobile: paddingDesktop
             }"
         >
             <ng-content select="[ftr]"/>
         </div>
     </footer>
 
+    <!--segundo pie de página de la aplicación-->
     <footer
+        class="sfooter"
         [ngStyle]="{
             'background': color.sfooter
         }"
     >
         <div
             [ngStyle]="{
-                'padding-left.px': padding.left,
-                'padding-right.px': padding.right
+                'padding-left.px': isMobile?paddingMobile: paddingDesktop,
+                'padding-right.px':  isMobile?paddingMobile: paddingDesktop
             }"
         >
             <ng-content select="[sftr]"/>
