--- a/src/app/structure/struct/struct.component.scss
+++ b/src/app/structure/struct/struct.component.scss
@@ -1,11 +1,3 @@
-/*.padding {
-    padding: 0 20px 0 20px;
-}*/
-
-/*body{
-    overflow: hidden;
-}*/
-
 .struct {
     display: flex;
     flex-direction: column;
@@ -30,7 +22,7 @@
 
     }
 
-    .back {
+    .backdoor {
         position: absolute;
         inset: 0 0 0 0;
         background-color: rgba(0, 0, 0, 0.5);
