--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,8 @@
 /* You can add global styles to this file, and also import other style files */
+:root {
+  --color-header: var("asdf") ;
+}
+
 * {
   margin: 0;
   padding: 0;
