--- a/src/app/structure/header/header.component.html
+++ b/src/app/structure/header/header.component.html
@@ -102,6 +102,7 @@
             </svg>
         </div>
     } @else {
-        <app-item class="menu" [items]="items"/>
+      <!--  <app-item class="menu" [items]="items"/>-->
+        empty
     }
 </nav>
