--- a/src/app/structure/footer/footer.component.html
+++ b/src/app/structure/footer/footer.component.html
@@ -1,9 +1,9 @@
 <div class="container-base">
     <p class="item-base question">
-        ¿Te gustaría recibir este sistema de información completo de
+        ¿Te gustaría recibir este sistema completo de
         <strong id="s1">altísima calidad </strong>
         y de forma
-        <strong id="s2">totalmente gratuita</strong>?
+        <strong id="s2">totalmente gratuita</strong> en formato PDF?
     </p>
 
     <div class="item-base container-correo">
@@ -17,13 +17,13 @@
 
         <p class="item-correo">
             Después de verificar tu correo electrónico, recibirás otro correo con el enlace de descarga del Sistema RT.
-            Este enlace te llevará a un paquete que incluye todos los archivos necesarios para utilizar el sistema.
+            Este enlace te llevará a un paquete que incluye el archivo PDF.
         </p>
 
-        <!--<p class="item-correo">
+        <p class="item-correo">
             Si necesitas ayuda en algún momento, no dudes en ponerte en contacto con nuestro equipo de soporte. ¡Gracias
             por elegir el Sistema RT!
-        </p>-->
+        </p>
 
         <button class="item-correo" (click)="send()">
             Solicitar
