--- a/src/app/structure/header/header.component.html
+++ b/src/app/structure/header/header.component.html
@@ -84,7 +84,7 @@
 
     @if (isMobile) {
         <!--icono hamburguesa en modo dispositivo móvil-->
-        <div class="hamburger" (click)="clickOnIconHamburger()">
+        <div class="hamburger" (click)="clickInBurger()">
             <svg
                 width="24"
                 height="24"
