--- a/src/app/pages/video/video.component.html
+++ b/src/app/pages/video/video.component.html
@@ -1,6 +1,7 @@
 <div>
-    <video width="320" height="240" controls>
-        <source src="assets/video/use-case-diagram.mp4" type="video/mp4">
-        Tu navegador no soporta el elemento de video.
-    </video>
+    <div>
+        <iframe width="320" height="240" src="https://www.youtube.com/embed/fFN1ExRCOtU" frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                allowfullscreen></iframe>
+    </div>
 </div>
