--- a/src/assets/scss/_colors.scss
+++ b/src/assets/scss/_colors.scss
@@ -1,3 +1,8 @@
 :root {
-    --color-header: var("asdf")
+    --body-oveer-flow: auto;
+    --background-color-header: #ffffff;
+    --background-color-main: #ffffff;
+    --background-color-footer: #2e3349ff;
+    --background-color-ofooter: #f98f00;
+    --color-text: #55565a;
 }
